--- a/details.html
+++ b/details.html
@@ -77,6 +77,49 @@
       </div>
     </nav>
 
+    <!-- Page Content -->
+    <div class="page-content page-details">
+      <section class="store-breadcrumbs" data-aos="fade-down" data-aos-delay="100">
+        <div class="container">
+          <div class="row">
+            <div class="col-12">
+              <nav>
+                <ol class="breadcrumb">
+                  <li class="breadcrumb-item">
+                    <a href="/index.html">Home</a>
+                  </li>
+                  <li class="breadcrumb-item active">
+                   Product Details
+                  </li>
+                </ol>
+              </nav>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="store-gallery" id="gallery">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-8" data-aos="zoom-in">
+              <transition name="slide-fade" mode="out-in">
+                <img :src="photos[activePhoto].url" :key="photos[activePhoto].id" class="w-100 main-image" alt="">
+              </transition>
+            </div>
+            <div class="col-lg-2">
+              <div class="row">
+                <div class="col-lg-3 col-lg-12 mt-2 mt-lg-0" v-for="(photo, index) in photos" :key="photo.id" data-aos="zoom-in" data-aos-delay="100">
+                  <a href="#" @click="changeActive(index)">
+                    <img :src="photo.url" class="w-100 thumbnail-image" :class="{ active: index == activePhoto}" alt="">
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+
     <footer>
       <div class="container">
         <div class="row">
@@ -95,6 +138,41 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
+    </script>
+    <script src="/vendor/vue/vue.js"></script>
+    <script>
+      var gallery = new Vue({
+        el: "#gallery",
+        mounted() {
+          AOS.init();
+        },
+        data: {
+          activePhoto: 0,
+          photos: [
+            {
+              id: 1,
+              url: "/images/product-details1.jpg"
+            },
+            {
+              id: 2,
+              url: "/images/product-details2.jpg"
+            },
+            {
+              id: 3,
+              url: "/images/product-details3.jpg"
+            },
+            {
+              id: 4,
+              url: "/images/product-details4.jpg"
+            },
+          ],
+        },
+        methods: {
+          changeActive(id) {
+            this.activePhoto = id;
+          },
+        },
+      });
     </script>
     <script src="/script/navbar-scroll.js"></script>
   </body>
